--- a/molecule/resources/playbooks/create1.yml
+++ b/molecule/resources/playbooks/create1.yml
@@ -37,6 +37,7 @@
           'address': item.networkInterfaces[0].accessConfigs[0].natIP,
           'user': molecule_yml.driver.ssh_user,
           'port': '5986',
+          'password': molecule_yml.driver.win_2016_pw if item.name | regex_search('windows-2016') != None else molecule_yml.driver.win_2019_pw,
           'connection': 'winrm', } ] }}
       with_items: "{{ instance_created_windows.instances }}"
       when: instance_created_windows.changed
