--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -16,7 +16,7 @@
           'user': "{{ molecule_yml.driver.ssh_user }}",
           'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
           'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}",
-          'identity_file': "{{ molecule_yml.driver.ssh_key_file }}"
+          'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
           'winrm_server_cert_validation': 'ignore', }
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
