--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -16,8 +16,7 @@
           'user': "{{ molecule_yml.driver.ssh_user }}",
           'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
           'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}",
-          'identity_file': "{{ molecule_yml.driver.ssh_key_file }}",
-          'winrm_server_cert_validation': 'ignore', }
+          'identity_file': "{{ molecule_yml.driver.ssh_key_file }}", }
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
       when: instance_created.changed
@@ -35,19 +34,11 @@
         instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
       when: instance_created.changed
 
-    - name: debug
-      debug:
-        msg: "{{ instance_conf }}"
-
     - name: Dump instance config
       copy:
         content: "{{ instance_conf | to_json | from_json }}"
         dest: "{{ molecule_instance_config }}"
       when: instance_created.changed
-
-    - name: debug
-      debug:
-        msg: "{{ instance_conf | to_json | from_json }}"
 
     - name: Sleep five minutes to allow GCP instances to spin up
       pause:
