--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -15,19 +15,19 @@
           'address': "{{ item.networkInterfaces[0].accessConfigs[0].natIP }}",
           'user': "{{ molecule_yml.driver.ssh_user }}",
           'port': "{{ '22' if item.name | regex_search('windows') == None else '5986' }}",
-          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}", }
-          #'identity_file': "{{ molecule_yml.driver.ssh_key_file }}", }
+          'connection': "{{ 'ssh' if item.name | regex_search('windows') == None else 'winrm' }}",
+          'identity_file': "{{ molecule_yml.driver.ssh_key_file }}", }
       with_items: "{{ instance_created.instances }}"
       register: instance_config_dict
       when: instance_created.changed
 
     - name: debug
       debug:
-        msg: "{{ molecule_yml.driver.win_2016_pw }}"
+        msg: '{{ molecule_yml.driver.win_2016_pw }}'
 
     - name: debug
       debug:
-        msg: "{{ molecule_yml.driver.win_2019_pw }}"
+        msg: '{{ molecule_yml.driver.win_2019_pw }}'
 
     - name: Convert instance config dict to a list
       set_fact:
