--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -53,9 +53,9 @@ provisioner:
 #        ansible_port: 5986
         ansible_winrm_server_cert_validation: 'ignore'
       windows-2016:
-        ansible_password: !unsafe '${WIN_2016_PW}'
+        ansible_password: '${WIN_2016_PW}'
       windows-2019:
-        ansible_password: !unsafe '${WIN_2019_PW}'
+        ansible_password: '${WIN_2019_PW}'
   playbooks:
     create: ../resources/playbooks/create.yml
     converge: ../resources/playbooks/converge.yml
