--- a/molecule/resources/playbooks/delete_instance.yml
+++ b/molecule/resources/playbooks/delete_instance.yml
@@ -8,3 +8,5 @@
     auth_kind: serviceaccount
     service_account_file: "{{ molecule_yml.driver.gcp_service_account_key }}"
   register: instance
+  # Don't tear down windows instances, since they require manual setup.
+  when: item.name | regex_search('windows') == None
