--- a/molecule/resources/playbooks/verify.yml
+++ b/molecule/resources/playbooks/verify.yml
@@ -4,71 +4,20 @@
   hosts: all
   become: true
 
-  vars:
-    agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
-    package_name: "{{ 'stackdriver-agent' if agent_type=='monitoring' else 'google-fluentd' if agent_type == 'logging' else 'google-cloud-ops-agent' }}"
-    main_config_file: "{{ lookup('env', 'MAIN_CONFIG_FILE') | default('', True) }}"
-    additional_config_dir: "{{ '' if agent_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
-
   tasks:
-    - name: Include vars
-      include_vars:
-        file: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') }}/vars/main.yml"
-
-    - name: Ensure the agent is present
-      package:
-        name: "{{ package_name }}"
-        state: present
-      register: result
-
-    - name: Assert the agent was already present
-      assert:
-        that: result.changed == false
-
-    - name: Ensure the agent is running
-      service:
-        name: "{{ vars[agent_type + '_service_name'] }}"
-        state: started
-      register: result
-
-    - name: Assert the agent was already running
-      assert:
-        that: result.changed == false
-
-    - when: main_config_file | length > 0
-      block:
-        - name: Read config file
-          command:
-            cmd: "cat {{ vars[agent_type + '_config_path'] }}"
-          register: result
-
-        - name: Assert the custom config was copied properly
-          assert:
-            that: "'# Sample custom config.' in result.stdout"
-
-    - when: additional_config_dir | length > 0 and agent_type != 'ops-agent'
-      block:
-        - name: List contents of the plugin directory
-          command:
-            cmd: "ls {{ vars[agent_type + '_plugins_path'] }}"
-          register: result
-
-        - name: Assert the plugin config was copied properly
-          assert:
-            that: "'custom_config.conf' in result.stdout"
-
-    - name: Uninstall agent
-      include_role:
-        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+    - name: Call Linux specific playbook
+      include_tasks: verify_linux.yml
       vars:
-        package_state: absent
+        agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
+        package_name: "{{ 'stackdriver-agent' if agent_type=='monitoring' else 'google-fluentd' if agent_type == 'logging' else 'google-cloud-ops-agent' }}"
+        main_config_file: "{{ lookup('env', 'MAIN_CONFIG_FILE') | default('', True) }}"
+        additional_config_dir: "{{ '' if agent_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
+      when: ansible_os_family in ['Debian', 'RedHat', 'Suse']
 
-    - name: Ensure the agent is absent
-      package:
-        name: "{{ package_name }}"
-        state: absent
-      register: result
-
-    - name: Assert the agent was already absent
-      assert:
-        that: result.changed == false
+    - name: Call Windows specific playbook
+      include_tasks: verify_windows.yml
+      vars:
+        agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
+        main_config_file: "{{ lookup('env', 'MAIN_CONFIG_FILE') | default('', True) }}"
+        additional_config_dir: "{{ '' if agent_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
+      when: ansible_os_family == 'Windows'
