--- a/molecule/ops-agent-test/molecule.yml
+++ b/molecule/ops-agent-test/molecule.yml
@@ -16,89 +16,90 @@ lint: |
   yamllint .
   # TODO(rmoriar1): add back the ansible-lint routine once an updated version is available on the GCP_UBUNTU VM.
 platforms:
-        # - name: "ansible-centos-7-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/centos-cloud/global/images/family/centos-7
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - centos
-        # - name: "ansible-centos-8-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/centos-cloud/global/images/family/centos-8
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - centos
-        # - name: "ansible-rhel-7-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/rhel-cloud/global/images/family/rhel-7
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - rhel
-        # - name: "ansible-rhel-8-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/rhel-cloud/global/images/family/rhel-8
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - rhel
-        # - name: "ansible-ubuntu-1604-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - ubuntu
-        # - name: "ansible-ubuntu-1804-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - ubuntu
-        # - name: "ansible-ubuntu-2004-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-2004-lts
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - ubuntu
-        # - name: "ansible-debian-9-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/debian-cloud/global/images/family/debian-9
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - debian
-        # - name: "ansible-debian-10-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/debian-cloud/global/images/family/debian-10
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - debian
-        # - name: "ansible-sles-12-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/suse-cloud/global/images/family/sles-12
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - sles
-        # - name: "ansible-sles-15-${MOLECULE_SCENARIO_NAME}"
-        #   image_family: projects/suse-cloud/global/images/family/sles-15
-        #   machine_type: e2-medium
-        #   size_gb: 40
-        #   groups:
-        #     - linux
-        #     - sles
+ - name: "ansible-centos-7-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/centos-cloud/global/images/family/centos-7
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - centos
+ - name: "ansible-centos-8-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/centos-cloud/global/images/family/centos-8
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - centos
+ - name: "ansible-rhel-7-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/rhel-cloud/global/images/family/rhel-7
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - rhel
+ - name: "ansible-rhel-8-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/rhel-cloud/global/images/family/rhel-8
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - rhel
+ - name: "ansible-ubuntu-1604-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - ubuntu
+ - name: "ansible-ubuntu-1804-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - ubuntu
+ - name: "ansible-ubuntu-2004-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-2004-lts
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - ubuntu
+ - name: "ansible-debian-9-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/debian-cloud/global/images/family/debian-9
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - debian
+ - name: "ansible-debian-10-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/debian-cloud/global/images/family/debian-10
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - debian
+ - name: "ansible-sles-12-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/suse-cloud/global/images/family/sles-12
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - sles
+ - name: "ansible-sles-15-${MOLECULE_SCENARIO_NAME}"
+   image_family: projects/suse-cloud/global/images/family/sles-15
+   machine_type: e2-medium
+   size_gb: 40
+   groups:
+     - linux
+     - sles
   - name: "ansible-windows-2016-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/windows-cloud/global/images/family/windows-2016
     machine_type: e2-medium
     size_gb: 80
     groups:
       - windows
+      - windows-2016
       - windows-2016-${AGENT_TYPE}
   - name: "ansible-windows-2019-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/windows-cloud/global/images/family/windows-2019
@@ -106,15 +107,21 @@ platforms:
     size_gb: 80
     groups:
       - windows
+      - windows-2019
       - windows-2019-${AGENT_TYPE}
 provisioner:
   name: ansible
   inventory:
-    links:
-      group_vars: '../../group_vars'
     group_vars:
       linux:
         ansible_ssh_private_key_file: ${SSH_KEY_FILE}
+      windows:
+        ansible_become: false
+        ansible_winrm_server_cert_validation: ignore
+      windows-2016:
+        ansible_password: '"${WIN_2016_PW}"'
+      windows-2019:
+        ansible_password: '"${WIN_2019_PW}"'
   playbooks:
     create: ../resources/playbooks/create.yml
     converge: ../resources/playbooks/converge.yml
