Add cleanup step which removes the agent incase the test failed between installation and uninstallation steps.

--- a/molecule/monitoring-test/molecule.yml
+++ b/molecule/monitoring-test/molecule.yml
@@ -110,6 +110,7 @@ provisioner:
     create: ../resources/playbooks/create.yml
     converge: ../resources/playbooks/converge.yml
     verify: ../resources/playbooks/verify.yml
+    cleanup: ../resources/playbooks/cleanup.yml
     destroy: ../resources/playbooks/destroy.yml
 verifier:
   name: ansible
