--- a/molecule/logging-test/molecule.yml
+++ b/molecule/logging-test/molecule.yml
@@ -114,6 +114,16 @@ platforms:
     groups:
       - windows
       - windows-2019
+test_sequence:
+  - lint
+  - destroy
+  - syntax
+  - create
+  - converge
+  - idempotence
+  - verify
+  - cleanup
+  - destroy
 provisioner:
   name: ansible
   inventory:
