--- a/molecule/resources/playbooks/cleanup.yml
+++ b/molecule/resources/playbooks/cleanup.yml
@@ -5,7 +5,7 @@
   become: true
 
   tasks:
-    - name: Install agent
+    - name: Uninstall agent
       include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
