Support Ops Agent 2.0.0 (#1)
* support ops agent 2 while remaining compatible with ops agent 1

* revert handleer change

* use fluentbit validation command

* consistent with ( condition )

* ansible complains about variable naming when referencing inside a conditional, use an underscore

* rework how service names are set and referenced. this allows cloud ops agent service name to be set conditionally

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: "restart {{ agent_type }} agent"
   service:
-    name: "{{ vars[agent_type + '_service_name'] }}"
+    name: "{{ service_name }}"
     state: restarted
   when: package_state == 'present' and not ansible_check_mode
 
