Conditionally add '.target' to the service name if the user is installing version 1.* of the ops agent.
Remove validation step installing the ops-agent with custom config.

--- a/molecule/resources/playbooks/verify_linux.yml
+++ b/molecule/resources/playbooks/verify_linux.yml
@@ -15,7 +15,7 @@
 
 - name: Ensure the agent is running
   service:
-    name: "{{ vars[agent_type + '_service_name'] }}"
+    name: "{{ vars[agent_type + '_service_name'] }}{{ '.target' if agent_type == 'ops-agent' and lookup('env', 'VERSION').split('.')[0] == '1' else '' }}"
     state: started
   register: result
 
