--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: "restart {{ agent_type }} agent"
   service:
-    name: "{{ vars[agent_type + '_service_name'] }}"
+    name: "{{ vars[agent_type + '_service_name'] }}{{ '.target' if agent_type == 'ops-agent' and version.split('.')[0] == '1' else '' }}"
     state: restarted
   when: package_state == 'present' and not ansible_check_mode
 
