--- a/tasks/linux.yml
+++ b/tasks/linux.yml
@@ -41,7 +41,7 @@
         force: true
         mode: 0644
         validate: "{{ vars[agent_type + '_validation_cmd'] }}"
-      when: main_config_file | length > 0 and agent_type != 'ops-agent'
+      when: (main_config_file | length > 0) and agent_type != 'ops-agent'
       notify: "restart {{ agent_type }} agent"
 
     - name: Copy main config file onto the remote machine
@@ -50,7 +50,7 @@
         dest: "{{ vars[agent_type + '_config_path'] }}"
         force: true
         mode: 0644
-      when: main_config_file | length > 0 and agent_type == 'ops-agent'
+      when: (main_config_file | length > 0) and agent_type == 'ops-agent'
       notify: "restart {{ agent_type }} agent"
 
     - name: Copy additional configs onto the remote machine
@@ -62,7 +62,7 @@
         validate: "{{ vars[agent_type + '_validation_cmd'] }}"
       with_fileglob:
         - "{{ additional_config_dir }}/*.conf"
-      when: additional_config_dir | length > 0
+      when: (additional_config_dir | length > 0)
       notify: "restart {{ agent_type }} agent"
 
 - name: Remove temp directory
